layout issues fixed

--- a/assets/sass/site/_base.scss
+++ b/assets/sass/site/_base.scss
@@ -6,3 +6,7 @@ body {
 img {
     @include img-fluid;
 }
+
+.screen-reader-text {
+    @include sr-only();
+}
